<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/nav_graph"
	app:startDestination="@id/service_manager_fragment">

	<fragment
		android:name="ua.syt0r.furiganit.app.serviceManager.ServiceManagerFragment"
		android:label="@string/app_name"
		android:id="@+id/service_manager_fragment"/>

	<fragment
		android:name="ua.syt0r.furiganit.app.history.HistoryFragment"
		android:label="@string/history"
		android:id="@+id/history_fragment"/>

	<fragment
		android:name="ua.syt0r.furiganit.app.settings.SettingsFragment"
		android:label="@string/app_name"
		android:id="@+id/settings_fragment"/>

	<fragment
		android:name="ua.syt0r.furiganit.app.about.AboutFragment"
		android:label="@string/about"
		android:id="@+id/about_fragment"/>

</navigation>