<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/about_title"
        android:textColor="#212121"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#BDBDBD"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#212121"
        android:text="@string/about_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/purchase_layout">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#BDBDBD"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like_app"
            android:textColor="#212121"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_dev"
            android:background="?selectableItemBackground"
            android:layout_gravity="center_horizontal"
            android:id="@+id/support_button"/>

    </LinearLayout>


</LinearLayout>